# libcom

./: .gitignore  2.ini  CMakeLists.txt  ChangeLog.txt  LICENSE  README  build  build.sh  config.txt
config/: com.ini
src/: CJsonObject.cpp  bcp.cpp  bcp_base64.cpp  bcp_cache.cpp  bcp_com.cpp  bcp_config.cpp  bcp_crc.cpp  bcp_dns.cpp  bcp_file.cpp  bcp_ipc_tcp.cpp  bcp_ipc_ud.cpp  bcp_kv.cpp  bcp_kv_result.cpp  bcp_kvs.cpp  bcp_log.cpp  bcp_md5.cpp  bcp_mem.cpp  bcp_nmea.cpp  bcp_serializer.cpp  bcp_socket.cpp  bcp_sqlite.cpp  bcp_stack.cpp  bcp_task.cpp  bcp_thread.cpp  bcp_timer.cpp  bcp_url.cpp  cJSON.c  cJSON_x.c  cmocka.c  com.cpp  com_auto_test.cpp  com_base.cpp  com_base64.cpp  com_cache.cpp  com_com.cpp  com_config.cpp  com_crc.cpp  com_dns.cpp  com_file.cpp  com_ipc_tcp.cpp  (+30 more)
src/export/: CJsonObject.h  bcp.h  bcp_base64.h  bcp_cache.h  bcp_com.h  bcp_config.h  bcp_crc.h  bcp_dns.h  bcp_err.h  bcp_file.h  bcp_ipc_tcp.h  bcp_ipc_ud.h  bcp_kv.h  bcp_kv_result.h  bcp_kvs.h  bcp_log.h  bcp_mem.h  bcp_nmea.h  bcp_serializer.h  bcp_socket.h  bcp_sqlite.h  bcp_stack.h  bcp_task.h  bcp_test.h  bcp_thread.h  bcp_timer.h  bcp_url.h  cJSON.h  cJSON_x.h  cmocka.h  com.h  com_auto_test.h  com_base.h  com_base64.h  com_cache.h  com_com.h  com_config.h  com_crc.h  com_dns.h  com_err.h  (+30 more)
src/spdlog/details/: os-inl.h  periodic_worker-inl.h
src/test/: bcp_base64_test.cpp  bcp_cache_test.cpp  bcp_com_test.cpp  bcp_config_test.cpp  bcp_crc_test.cpp  bcp_dns_test.cpp  bcp_file_test.cpp  bcp_ipc_tcp_test.cpp  bcp_ipc_ud_test.cpp  bcp_kv_test.cpp  bcp_kvs_test.cpp  bcp_log_test.cpp  bcp_md5_test.cpp  bcp_mem_test.cpp  bcp_nmea_test.cpp  bcp_serializer_test.cpp  bcp_socket_test.cpp  bcp_sqlite3_test.cpp  bcp_task_test.cpp  bcp_test.cpp  bcp_thread_test.cpp  bcp_timer_test.cpp  bcp_url_test.cpp  com_auto_test_test.cpp  com_base64_test.cpp  com_base_test.cpp  com_cache_test.cpp  com_com_test.cpp  com_config_test.cpp  com_crc_test.cpp  com_dns_test.cpp  com_file_test.cpp  com_http_test.cpp  com_ipc_tcp_test.cpp  com_ipc_ud_test.cpp  com_itp_log_test.cpp  com_kv_test.cpp  com_kvs_test.cpp  com_log_test.cpp  com_md5_test.cpp  (+15 more)
